--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="jumbotron">
             <h1 class="display-4"> Chrystal Collector !</h1>
             <hr class="my-4">
-            <a class="btn btn-sm btn-primary" href="#" role="button"> Play Theme ! </a>
-            <a class="btn btn-sm btn-secondary" href="#" role="button"> Pause Audio </a>
+            <a class="btn btn-sm btn-primary playaudio" href="#" role="button"> Play Theme ! </a>
+            <a class="btn btn-sm btn-secondary pauseaudio" href="#" role="button"> Pause Audio </a>
         </div>
     </div>
 
