added audio element in html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         <div class="jumbotron">
             <h1 class="display-4"> Chrystal Collector !</h1>
             <hr class="my-4">
-            <a class="btn btn-sm btn-primary playaudio" href="#" role="button"> Play Theme ! </a>
-            <a class="btn btn-sm btn-secondary pauseaudio" href="#" role="button"> Pause Audio </a>
+            <audio id="themeaudio" controls>
+                <source src="assets/images/Harry Potter Theme Song.mp3" type="audio/mpeg">
+            </audio>
+            <!-- <button class="btn btn-sm btn-primary playaudio" role="button"> Play Theme ! </button>
+            <button class="btn btn-sm btn-secondary pauseaudio" role="button"> Pause Audio </button> -->
         </div>
     </div>
 
